[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Components/Health.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game/Sound.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sounds/regular heal.wav" type="AudioStream" id=3]

[node name="Health" type="Node"]
script = ExtResource( 1 )

[node name="RecentDamagerReset" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sound" parent="." instance=ExtResource( 2 )]
stream = ExtResource( 3 )

[connection signal="timeout" from="RecentDamagerReset" to="." method="_on_RecentDamagerReset_timeout"]
